--- a/Project_1/style.css
+++ b/Project_1/style.css
@@ -1,9 +1,12 @@
-  html{
+html{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      
 }
 header>h1{
     font-weight: 400;
+}
+a{
+    text-decoration: none;
 }
 
 header{
@@ -37,4 +40,30 @@ nav{
     width: 95vw;
     height: 70vh;
     margin: 1rem;
+}
+
+article{
+    display: flex;
+    margin: 2rem;
+}
+
+.container{
+    text-align: center;
+    margin-right: 2rem;
+    padding: 1rem;
+}
+
+p{
+    font-size: 1.2rem;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    height: 4rem;
+    font-size: 1.5rem;
+    align-items: center;
+
 }
